# 2022_06_Autom_Remote_Control

./: app.py  pyproject.toml
